# sprites-plus

./: .gitignore  AnovaBiPartitionQualifier.cpp  AnovaBiPartitionQualifier.h  BamToolsLibInsertSizeEstimator.cpp  BamToolsPairsToLeftReader.cpp  BamToolsPairsToLeftReader.h  BamToolsPairsToRightReader.cpp  BamToolsPairsToRightReader.h  BamToolsRGToLIbMapReader.cpp  BamToolsRGToLIbMapReader.h  BamToolsSCReadsReader.h  CMakeLists.txt  ChromosomeRegion.cpp  ChromosomeRegion.h  CompositeTargetRegionFinder.cpp  CompositeTargetRegionFinder.h  DeletionCaller.cpp  DeletionCaller.h  GenomePosition.cpp  GenomePosition.h  LeafTargetRegionFinder.cpp  LeafTargetRegionFinder.h  MaxDistDiffBiPartitioner.cpp  PerChromDeleletionCaller.cpp  PerChromDeleletionCaller.h  Reference.cpp  Reference.h  SpanningPair.cpp  SpanningPair.h  TargetRegionToLeftFinder.cpp  TargetRegionToLeftFinder.h  bipartitioner.h  libraryinsertsizeestimator.h  main2.cpp  sequencealigner.h  softclippedread.h  spanningpairsreader.h  targetregionfinder.h  variant.h  variantcaller.cpp  (+1 more)
cmake/modules/: FindHTSlib.cmake
include/: AGEAlignerAdapter.h  AGEReadRealigner.h  AGERealignWholeReadCaller.h  AGESuffixAligner.h  AlignmentFragment.h  AlignmentResult.h  BamToolsLibInsertSizeEstimator.h  BamToolsPairsToLeftReader.h  BamToolsPairsToRightReader.h  BamToolsRefNameFetcher.h  BamToolsSCReadsReader.h  CallResult.h  ChromoFragment.h  ChromosomeRegion.h  ChromosomeRegionWithCi.h  CompositeTargetRegionFinder.h  CustomSeqAligner.h  Deletion.h  DeletionCaller.h  DeletionFinder.h  DoubleFragsAlnResult.h  FittingAligner.h  FiveEndForwardSCRead.h  FiveEndReverseSCRead.h  GenomePosition.h  HTSlibSequenceFetcher.h  Interval.h  LeafTargetRegionFinder.h  Library.h  MedianPositionPicker.h  OrigRealignWholeReadCaller.h  PartialReadRealigner.h  PerChromDeleletionCaller.h  PerChromDeletionCaller.h  PerChromDeletionFinder.h  RealignClippedPartCaller.h  ReverseCustomSeqAligner.h  ScoreParam.h  SeqAlignerDecorator.h  SingleFragAlnResult.h  (+23 more)
legacy/: SoftClippedReadCluster.cpp  SoftClippedReadCluster.h  clip.h  main.cpp
src/: AGEAlignerAdapter.cpp  AGERealignWholeReadCaller.cpp  AGESuffixAligner.cpp  AlignmentFragment.cpp  AlignmentResult.cpp  AnovaBiPartitionQualifier.cpp  BamToolsLibInsertSizeEstimator.cpp  BamToolsPairsToLeftReader.cpp  BamToolsPairsToRightReader.cpp  BamToolsRGToLIbMapReader.cpp  BamToolsRefNameFetcher.cpp  BamToolsSCReadsReader.cpp  CMakeLists.txt  ChromosomeRegion.cpp  CompositeTargetRegionFinder.cpp  CustomSeqAligner.cpp  Deletion.cpp  DeletionCaller.cpp  DeletionFinder.cpp  DoubleFragsAlnResult.cpp  FiveEndForwardSCRead.cpp  FiveEndReverseSCRead.cpp  GenomePosition.cpp  HTSlibSequenceFetcher.cpp  Interval.cpp  LeafTargetRegionFinder.cpp  Library.cpp  MaxDistDiffBiPartitioner.cpp  MedianPositionPicker.cpp  PerChromDeleletionCaller.cpp  PerChromDeletionCaller.cpp  PerChromDeletionFinder.cpp  SingleFragAlnResult.cpp  SpanningPair.cpp  TargetRegion.cpp  TargetRegionToLeftFinder.cpp  TargetRegionToRightFinder.cpp  VariantMerger.cpp  main.cpp  readrealigner.cpp  (+3 more)
src/age/: AGEaligner.cpp
test/: AnovaQualifierTest.cpp  CMakeLists.txt  MaxDiffPartitionerTest.cpp  SequenceAlignerTest.cpp  testmain.cpp
